# Q-Interference-Memory-Efficient-Quantum-Inspired-Attention

./: .gitignore  ARTIFACT_NOTES.txt  README.md  REPO_TREE.txt  pyproject.toml  requirements.txt
appendix_figures/: make_appendix_a1_wikitext103.py  make_appendix_a1_wikitext103_ruler.py  make_appendix_a2_cross_dataset_memory.py  make_appendix_a3_quality_memory_tradeoff.py  make_appendix_a4_relative_change_matrix.py  make_appendix_a5_external_reference_scorecard.py
configs/: ablation_naive_small.yaml  ablation_no_phase.yaml  ablation_phase_activation.yaml  debug_baseline.yaml  debug_gptneo125_tinystories.yaml  debug_gptneo125_wikitext2.yaml  debug_openwebtext10k_gptneo125.yaml  debug_opt125_wikitext.yaml  debug_pile10k_gptneo125.yaml  debug_pile10k_opt125.yaml  debug_qbypass.yaml  debug_qhybrid.yaml  debug_quantum_paper.yaml  debug_smallc4_gptneo125.yaml  debug_smallc4_opt125.yaml  debug_tinystories_opt125.yaml  main_baseline.yaml  main_gptneo125_tinystories.yaml  main_gptneo125_wikitext.yaml  main_opt125_wikitext.yaml  main_qbypass.yaml  main_qbypass_matched_c.yaml  main_qbypass_matched_d.yaml  main_qhybrid.yaml  main_qhybrid_nophase.yaml  main_qnaive_matched_d.yaml  main_qnaive_small.yaml  main_quantum_paper.yaml  pile10k_baseline.yaml  pile10k_gptneo125.yaml  pile10k_naive.yaml  pile10k_opt125.yaml  pile10k_qhybrid.yaml  pile10k_qhybrid_nophase.yaml  pile10k_quantum_paper.yaml  smallc4_baseline.yaml  smallc4_gptneo125.yaml  smallc4_naive.yaml  smallc4_opt125.yaml  smallc4_qhybrid.yaml  (+9 more)
scripts/: check_exactness.py  collect_nophase_summary.sh  make_nophase_configs.py  (+12 more)
(+28 files in other folders)
