[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-bypass-gpt"
version = "0.1.0"
description = "Q-BypassGPT: Quantum-inspired GPT with memory-bypassed attention"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Emama Nahid" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
